--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1163,3 +1163,13 @@ section .container {
 .credits a:hover {
   color: #fff;
 }
+
+.blink_me {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
